--- a/_config.yml
+++ b/_config.yml
@@ -15,20 +15,22 @@
 # in the templates via {{ site.myvariable }}.
 title: Andromeda
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/Andromeda" # the subpath of your site, e.g. /blog
+description: Andromeda is one of the many guides to install and configure Arch Linux, so it may not be for you. However, it can be interesting for users who want inspiration or more details on the procedure and the configuration used.
+baseurl: "/Andromeda/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  ChaosDynamix
 
 # Build settings
 markdown: kramdown
 remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
+
+aux_links:
+  "Home":
+    - "//chaosdynamix.github.io/Andromeda"
+  "Github":
+    - "//github.com/ChaosDynamix/Andromeda"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
