--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -15,7 +5,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Andromeda
 email: your-email@example.com
-description: Andromeda is one of the many guides to install and configure Arch Linux, so it may not be for you. However, it can be interesting for users who want inspiration or more details on the procedure and the configuration used.
+description: Andromeda is one of the many guides to install and configure Arch Linux.
 baseurl: "/Andromeda/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ChaosDynamix
@@ -26,6 +16,7 @@ remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
 
+# Auxiliary links
 aux_links:
   "Home":
     - "//chaosdynamix.github.io/Andromeda"
