--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,12 @@ aux_links:
   "Github":
     - "//github.com/ChaosDynamix/Andromeda"
 
+# Kramdown
+kramdown:
+  toc_levels: "2"
+  syntax_highlighter_opts:
+    default_lang: bash
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
