--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ collections:
   preparation:
     title: Preparation
     nav_order: 1
-    permalink: /Andromeda/:collection/:path/
+    permalink: /:collection/:path/
     has_sections: true
     output: true
     is_post: false
@@ -49,7 +49,7 @@ collections:
   live-environment:
     title: Live environment
     nav_order: 2
-    permalink: /Andromeda/:collection/:path/
+    permalink: /:collection/:path/
     has_sections: false
     output: true
     is_post: false
@@ -57,7 +57,7 @@ collections:
   installation:
     title: Installation
     nav_order: 3
-    permalink: /Andromeda/:collection/:path/
+    permalink: /:collection/:path/
     has_sections: true
     output: true
     is_post: false
@@ -68,7 +68,7 @@ collections:
   configuration:
     title: Configuration
     nav_order: 4
-    permalink: /Andromeda/:collection/:path/
+    permalink: /:collection/:path/
     has_sections: false
     output: true
     is_post: false
